hphp/hack/test/typecheck/iface_require_incompat5.php.like_types.exp
File "iface_require_incompat5.php", line 10, characters 41-42:
Unable to satisfy trait/interface requirement (Typing[4110])
File "iface_require_incompat5.php", line 6, characters 25-27:
Expected ~int because it is an unenforceable type
File "iface_require_incompat5.php", line 6, characters 25-27:
Considering that this type argument is invariant with respect to Super
File "iface_require_incompat5.php", line 10, characters 25-27:
But got float
